# cmake_proj

./: CMakeLists.txt  build_for_linux.sh
include/local_include/Network/: common.h
src/Network/: network.cpp
tests/: CMakeLists.txt  test.cpp
